# SportIQ-MCP

./: .dockerignore  .env.example  .gcloudignore  .gitignore  .mcp.json  AGENTS.md  BACKERS.md  CLAUDE.md  Dockerfile  GAPS.md  PROJECT.md  README.md  SECURITY.md  cloud.md  cloudbuild.yaml  dev.md  glama.json  pyproject.toml  server.json
.claude/: settings.json
.claude/agents/: adapter-investigator.md  test-runner.md  tool-builder.md
.claude/commands/: add-adapter.md  add-tool.md  file-finding.md  ingest.md  inspect.md  refresh-cache.md  release.md  update-wiki.md
.claude/hooks/: block-dangerous-bash.sh  format-on-save.sh
.claude/rules/: api-budgets.md  caching-policy.md  error-envelope.md  fallback-contract.md  fastmcp-conventions.md  testing.md  wiki-conventions.md
.codex/: config.toml  hooks.json
.codex/agents/: adapter-investigator.toml  test-runner.toml  tool-builder.toml
.codex/hooks/: block-dangerous-bash.sh  format-on-save.sh
.github/: FUNDING.yml
.github/workflows/: release.yml  security.yml  test.yml  website.yml
docs/: index.md  log.md
docs/raw/: 2026-05-27-phase-1-cleanup.md  2026-05-28-phase-2.md  2026-05-28-phase-3.md  2026-05-30-step8-live-findings.md  2026-05-30-step9-test-matrix.md
evals/: sportiq_eval.xml
mcpb/: manifest.json
mcpb/server/: main.py
scripts/: build_cricket_priors.py  build_f1_circuit_profiles.py  build_wc2026_bracket.py  build_wc2026_teams.py  check_release_build.py  dashboard.py  dashboard_template.html  live_check.py  load_check.py
src/sportiq/: __init__.py  config.py  instructions.md  server.py
tests/: conftest.py
tests/adapters/: test_api_football.py  test_cricapi.py  test_cricbuzz_scraper.py  test_cricsheet.py  test_derived_standings.py  test_fastf1_local.py  test_football_data_org.py  test_football_static_seed.py  test_jolpica.py  test_ndtv_sports_scraper.py  test_openf1.py  test_openfootball.py  test_rapidapi_cricbuzz.py  test_scraper_skip_behavior.py  test_static_seed.py  test_theodds.py
tests/chains/: test_chain_key_redaction.py  test_chain_not_found.py  test_chain_respects_budget.py  test_chain_skips_unconfigured_adapter.py  test_cricket_chains.py  test_f1_chains.py  test_football_chains.py
tests/hooks/: test_agent_hooks.sh
tests/tools/: test_cricket_h2h.py  test_cricket_intel_tools.py  test_cricket_player_matchup.py  test_cricket_raw_tools.py  test_cricket_value_bets.py  test_cross_sport_accumulator.py  test_entitlements.py  test_f1_intel_tools.py  test_f1_quali.py  test_f1_race_pace.py  test_f1_tools.py  test_football_tools.py  (+7 more)
website/: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  tailwind.config.ts  website.md
(+333 files in other folders)
